--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -1,17 +1,22 @@
+/* desktop */
 @media screen and (min-width: 900px) {
-  .tb { display: none; }
+.tb { display: none; }
 }
 
+/* tablet */
 @media screen and (min-width: 700px) {
   :root { font-size: 16px; }
   .mb { display: none; }
 }
 
+/* mobile */
 @media screen and (max-width: 700px) {
   :root { font-size: 13px; }
   .dt { display: none !important; }
+  .wrapper { padding: 0.75rem !important; }
 }
 
+/* mobile mini */
 @media screen and (max-width: 350px) {
   :root { font-size: 11px; }
 }
