--- a/public/styles/x.css
+++ b/public/styles/x.css
@@ -32,13 +32,12 @@
 
 
 .wrapper {
-  padding: 2rem;
+  padding: 1rem;
 }
 
 .container {
-  padding: 0.5rem 0;
+  padding: 3rem 1rem;
   max-width: 1150px;
-  /* width: min(100% - 3rem, 1150px); */
   margin-inline: auto;
 }
 
@@ -56,7 +55,6 @@ ul {
 
 #header.wrapper {
   position: fixed;
-  padding: 0;
   width: 100%;
   z-index: 999;
   background: var(--color-bg);
@@ -64,10 +62,9 @@ ul {
 
 #header .container {
   display: flex;
+  padding: 0;
   justify-content: space-between;
   align-items: center;
-  padding: 0.4em;
-  height: 3em;
   align-items: center;
 }
 
@@ -206,14 +203,13 @@ ul {
   50% { border-color: var(--color-primary); }
 }
 
-#features.wrapper, #faqs.wrapper {
+#features.wrapper, #faq.wrapper {
   background: var(--separator) no-repeat center top;
   background-size: clamp(23em, 90vw, 80rem);
   margin: 0 auto;
 }
 
 .content.container {
-  padding: 3em 0;
   max-width: 18em;
   display: flex;
   flex-direction: column;
